# stillTerminal

./: README.md  UPDATE_TODOs  meson.build  stillTerminal.excalidraw  test  test.vala
data/: io.stillhq.stillTerminal.gschema.xml  io.stillhq.terminal.gschema.xml  style.css
data/schemes/: Debian.json  Fedora.json  Ubuntu.json
src/: Constants.vala  Main.vala  MainWindow.vala  ShortcutController.vala  meson.build
src/StPreferences/: Page Wizard Plans.md  StPrefsDialog.vala  StPrefsGeneralPage.vala  StPrefsProfileCreator.vala  StPrefsProfileEditor.vala  StPrefsProfilePage.vala  StPrefsWindow.vala  meson.build
src/StTerminal/: StColorScheme.vala  StProfile.vala  StSettings.vala  StTerminal.vala  meson.build
src/StVte/: StColorScheme.vala  StProfile.vala  StTerminal.vala  StTerminalPage.vala  StTerminalSettings.vala  meson.build
src/StWidgets/: StHeaderBar.vala  StTerminalPage.vala  meson.build
src/data/: io.stillhq.terminal.gresource.xml  io.stillhq.terminal.gschema.xml  meson.build  style.css
src/data/icons/: CREDITS.txt
src/schemes/: default.json
